Fix spacing on homepage

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,17 @@
 .about {
     display: flex;
     flex-direction: row;
+    margin: 5%
+}
+
+.section {
+    max-width: 50%;
+    margin: auto;
+}
+
+.center {
+    margin: 5% 10% 5% 10%;
+    text-align: center;
 }
 
 img {
